<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apakah anda pernah merasakan nyeri dada?"
        android:textSize="21sp"
        android:textAlignment="textStart" />

    <LinearLayout
        android:id="@+id/chestPainButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ya"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="14dp"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btn_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="14dp"
            android:text="@string/no" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="fill_horizontal"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/orange_transparent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="14dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:padding="14dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:enabled="false" />
    </GridLayout>
</LinearLayout>