<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_age"
        android:textSize="26sp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:layout_marginTop="12dp"/>

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="fill_horizontal"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/back"
            android:textSize="16sp"
            android:padding="14dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/orange_transparent"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="16sp"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:padding="14dp"
            android:backgroundTint="@color/orange"
            android:layout_marginStart="16dp" />
    </GridLayout>
</LinearLayout>