<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chestpain"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_chest_pain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="21dp"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="3"
        app:labelBehavior="visible"
        app:thumbColor="@color/orange"
        app:thumbWidth="8dp"
        app:tickColor="@color/orange"
        app:tickColorActive="@color/orange_transparent"
        app:trackColor="@color/orange_transparent"
        app:trackColorActive="@color/orange"
        tools:ignore="SpeakableTextPresentCheck" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="fill_horizontal"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange_transparent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="14dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="14dp"
            android:layout_marginStart="16dp" />
    </GridLayout>
</LinearLayout>